# javafx-vulkan

./: .gitignore  gradle.properties  settings.gradle.kts
app/: build.gradle.kts
app/src/main/cpp/: CMakeLists.txt  build.cmd
app/src/main/cpp/src/jni/: JniUtil.cpp  JniUtil.h
app/src/main/cpp/src/renderer/: TriangleVertex.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanRendererJni.cpp
app/src/main/cpp/src/util/: CommonLog.h  Debug.h  FileUtil.cpp  ImageUtil.cpp  ImageUtil.h  MathUtil.cpp  MathUtil.h  MyMath.h  StringUtil.cpp  StringUtil.h
app/src/main/cpp/src/vulkan/: QueueFamilyIndices.cpp
app/src/main/java/android/annotation/: AnyThread.java  CheckResult.java  ColorInt.java  ColorLong.java  HalfFloat.java  IntDef.java  IntRange.java  Size.java  SuppressAutoDoc.java  SuppressLint.kt  SystemApi.java  TestApi.java
app/src/main/java/android/content/: AssetManager.kt  Context.kt
app/src/main/java/android/graphics/: Bitmap.kt  Canvas.kt  Color.java  Insets.java  Matrix.kt  Paint.kt  Point.java  PointF.java  Rect.java  RectF.java  RectProto.kt
app/src/main/java/android/opengl/: GLSurfaceView.kt
app/src/main/java/android/os/: Parcel.kt  Parcelable.java
app/src/main/java/android/text/: TextUtils.kt
app/src/main/java/android/util/: Log.kt
app/src/main/java/android/util/logger/: FileLogger.kt
app/src/main/java/android/util/proto/: ProtoInputStream.kt  ProtoOutputStream.kt  WireTypeMismatchException.kt
app/src/main/java/android/view/: View.kt
app/src/main/java/com/android/internal/util/: FastMath.kt
app/src/main/java/com/github/xingray/: App.java  AppConfig.kt  FxApplication.kt
app/src/main/java/com/github/xingray/base/: BaseController.java
app/src/main/java/com/github/xingray/image/: ImageFormat.kt  InputImage.kt  InputImageExtension.kt
app/src/main/java/com/github/xingray/javafx/: AnchorPaneExtension.kt  ColorExtension.kt  ImageViewExtension.kt  NodeExtension.kt  RegionExtension.kt  StageExtension.kt  StyleExtension.kt  ToolKitExtension.kt
app/src/main/java/com/github/xingray/jvm/: AwtImageExtension.kt
app/src/main/java/com/github/xingray/kotlin/: BooleanExtension.kt  FloatArrayExtension.kt  FloatExtension.kt  IntArrayExtension.kt  IntExtension.kt  ListExtension.kt  NativeLibraryLoader.kt  (+2 more)
app/src/main/resources/fxml/: start.fxml
app/src/test/kotlin/org/example/: AppTest.kt
gradle/: libs.versions.toml
shader/: compute.glsl  fragment.glsl  vertex.glsl
shader/triangle/: glsl_compile.cmd
(+25 files in other folders)
